<resources>
    <string name="app_name" translatable="false">RadioEtzion</string>
    <string name="action_settings" translatable="false">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>

    <!-- PERMISSION STRINGS -->
    <string name="perm_deny">You must enable access to all requested permissions</string>

    <!-- TAB STRINGS -->
    <string name="tab_shows">Shows</string>
    <string name="tab_events">Events</string>
    <string name="tab_chat" translatable="false">CHAT</string>

    <!-- EXIT ALERT DIALOG STRINGS -->
    <string name="AD_txt">Are you sure you would like to leave the application?</string>
    <string name="AD_stay">STAY</string>
    <string name="AD_leave">LEAVE</string>
    <!-- PLAYER STRINGS -->

    <!--CONTACT US STRINGS -->
<!-- contact us - for nav bar-->
    <string name="contact_phone">"Phone:   04-9124536 "</string>
    <string name="contact_fax">"Fax:     04-6735526 "</string>
    <string name="contact_email">Email: dlm.school@b-e.org.il</string>


    <!-- NAVIGATION BAR STRINGS -->
    <string name="drawer_contact">Contact Us</string>
    <string name="drawer_about">About</string>
    <string name="drawer_chat">Chat</string>
    <string name="drawer_email" translatable="false">Email</string>
    <string name="drawer_share" translatable="false">Share</string>
    <string name="drawer_exit">Exit</string>



    <!-- WHO ARE WE STRINGS -->
    <string name="who_are_we">Beit Eckstein</string>
    <string name="who_are_we2">Pardes Hana - Karkur</string>
    <string name="who_are_we_txt_head_pop">Audience:</string>
    <string name="who_are_we_txt_pop">Children with intellectual disabilities. The children\'s village is an educational framework.</string>
    <string name="who_are_we_txt_head_about">Our Village:</string>
    <string name="who_are_we_txt_about">In the village, eight houses are adapted to the functions of the residents and their special needs. The children\'s village is located in a green and peaceful rural environment and offers its residents countless leisure and fun activities in the countryside. The residents of the village enjoy a high quality of life through dedicated care, leisure activities, a nearby school, medical treatment and more. The village has children of different levels of functioning from young children in high cognitive functioning to adult tenants in low cognitive functioning. Life in the village is quite comfortable, starting with the morning, including a shower, a healthy breakfast and close support to the school and the employment center in the village.</string>
    <string name="who_are_we_txt_head_fun">Activities and Leisure:</string>
    <string name="who_are_we_txt_fun">"The village offers a wide range of enrichment and recreation activities for residents, such as: Therapeutic riding, therapeutic gardening, Snoezelen, emotional therapy through dogs, music and band, art, martial arts, volunteers from Kfar Pines as part of personal commitment, Students from Ruppin conducting workshops, youth movements such as Scouts and Wings of Krembo, Skype conversations with parents and more. A tradition of many years is preserved in the village. Every year, all the children of the village who have reached the age of mitzva are celebrated at a festive event with the participation of the family and the staff. "</string>
    <string name="who_are_we_txt_head_staff">Our Staff:</string>
    <string name="who_are_we_txt_staff">"The therapeutic staff includes social workers, occupational therapists, speech therapists, behavioral analysts, physiotherapists and clinical dietitians. "</string>
    <string name="who_are_we_txt_head_village">Children\'s Village Extension:</string>
    <string name="who_are_we_txt_village">"A luxurious private home with a large yard for high-functioning tenants. Residents of the branch are integrated into the community in all aspects of life. The facility is supervised by the Ministry of Social Affairs - the Department for the Treatment of People with Developmental Disabilities. "</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
</resources>
